ТЗ-4 (1st correction)